Fix fonts not showing on non-GFS Didot systems

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ nav {
 html {
 	/* smooth scrolling when clicking an anchor tag */
 	scroll-behavior: smooth;
+	font-family: "GFS Didot";
 }
 
 html, body {
@@ -41,7 +42,6 @@ a.nav-element {
 	color: white;
 	text-decoration: none;
 	font-size: 32px;
-	font-family: "GFS Didot";
 }
 
 #quote {
@@ -57,10 +57,6 @@ a.nav-element {
 
 	/* font config */
 	font-size: 48px;
-	font-family: "GFS Didot";
-	font-style: normal;
-	font-weight: 400;
-	line-height: normal; 
 }
 
 #logo {
@@ -80,10 +76,7 @@ h1.heading {
   scroll-margin-top: 110px;
 
 	/* font config */
-	font-family: "GFS Didot";
 	font-size: 64px;
-	font-style: normal;
-	font-weight: 400;
 	letter-spacing: 5px;
 
 	/* center element */
@@ -99,9 +92,8 @@ h1.heading {
 	font-size: 32px;
 	justify-content: center;
 	align-items: center;
+	padding: 0px 160px 0px;
 
 	/* font config */
-	font-weight: 400;
 	text-align: center;
-	padding: 0px 160px 0px;
 }
